--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Skylar's Personal Blog
+author: A GitHub User
+email: skylar@tdavis.me
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my personal blog website. I'm very exited to list to list my resume and project details on my personal
+  website. I wanted to create a personal page from scratch to get the experience. Creating a webpage from 
+  scratch is about the experience in learning something new. Thank you for visiting my webpage today. 
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: Not on twitter or social media yet.  # DO NOT include the @ character, or else the build will fail!
+github_username:  sd262b # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
